<resources>
    <string name="server_uri">http://192.168.1.8/HelpU/</string>
    <string-array name="hire_list">
        <item>0|Please Select...</item>
        <item>1|Contractor</item>
        <item>2|Plumber</item>
        <item>3|Handyman</item>
        <item>4|Interior Designer</item>
        <item>5|Cleaning Service</item>
        <item>6|Move House</item>
        <item>7|Photographer</item>
        <item>8|Videographer</item>
        <item>9|Hair and Makeup</item>
        <item>10|Wedding Planner</item>
    </string-array>
    <string name="app_name">HelpU</string>
    <string name="action_settings">Settings</string>
    <string name="action_about_us">About Us</string>
    <string name="action_project_status_flow">Project Status Flow</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="action_server_info">Server Info</string>
    <string name="action_send_email">Send Email</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_hire">Hire</string>
    <string name="title_activity_work">Work</string>
    <string name="title_activity_application_list">Application List</string>
    <string name="title_activity_work_list">Work List</string>
    <string name="title_activity_service_provider_list">Service Provider List</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_user_profile_setting">User Profile Setting</string>
    <string name="title_activity_customer_request_list">Customer Request List</string>
    <string name="title_activity_customer_request_by_id">Customer Request By ID</string>
    <string name="title_activity_service_provider_by_id">Service Provider By ID</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_customer_request_pick_service_provider">
        Customer Request Pick Service Provider
    </string>
    <string name="title_activity_notification_job_offer">Notification Job Offer</string>
    <string name="title_activity_service_provider_create_quotation">Service Provider Create Quotation
    </string>
    <string name="title_activity_customer_request_job_list">Customer Request Job List</string>
    <string name="title_activity_service_provider_confirm_quotation">
        Service Provider Confirm Quotation
    </string>
    <string name="title_activity_customer_do_down_payment">Customer Do Down Payment</string>
    <string name="title_activity_project_messages">Project Messages</string>
    <string name="title_activity_ipay88_sample">IPay88SampleActivity</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_help_ubase">HelpU Base Activity</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="title_activity_life_cycle">Life Cycle</string>
    <string name="title_activity_server_info">Server Info</string>
    <string name="title_activity_send_email">Send Email</string>
    <string name="ProdDesc">Product Description</string>
    <string name="Amount">Amount (RM)</string>
    <string name="UserName">Customer Name</string>
    <string name="UserContact">Phone Number</string>
    <string name="strEmail">Email</string>
    <string name="Result">Result</string>
    <string name="btnPrint">Print Receipt</string>
    <string name="btnHome">Home</string>
    <string name="strRefNo">Ref No</string>
    <string name="strAmount">Amount</string>
    <string name="strRemark">Remark</string>
    <string name="strTransId">Trans Id</string>
    <string name="strAuthCode">AuthCode</string>
    <string name="strStatus">Status</string>
    <string name="strErrDesc">Error Description</string>
    <string name="strSignature">Signature</string>
    <string name="strREFID">Reference ID</string>
    <string name="imgDesc">ipay demo logo</string>
    <string name="strPay">Pay Now</string>
    <string name="strCancel">Cancel</string>
    <string name="strMerchantKey">Merchant Key</string>
    <string name="strMerchantCode">Merchant Code</string>
    <string name="strPaymentID">Payment ID</string>
    <string name="strCurrency">Currency</string>
    <string name="strLang">Language</string>
    <string name="strCountry">Country</string>
    <string name="strBackendPost">Backend Post URL</string>
    <string name="strRequery">Requery</string>
    <string name="hello_world">Hello world!</string>
    <string name="strPaymentId">PaymentId</string>
    <string name="strUsername">Username</string>
    <string name="strPassword">Password</string>
    <string name="strLogin">Login</string>
    <string name="strRegister">Register</string>
    <string name="strName">Name</string>
    <string name="strRetypePassword">Re-type Password</string>
    <string name="strContact">Contact</string>
    <string name="strNameEmpty">Name Can Not Empty</string>
    <string name="strUsernameAlreadyExists">Username Already Exists</string>
    <string name="strUsernameEmpty">Username Can Not Empty</string>
    <string name="strPasswordEmpty">Password Can Not Empty</string>
    <string name="strPasswordMismatch">Password Did Not Match</string>
    <string name="strPasswordTooShort">Password Too Short. Need More Than Six Alphabetical Character</string>
    <string name="strUserContactEmpty">Contact Number Can Not Empty</string>
    <string name="strUserEmailEmpty">Email Can Not Empty</string>
    <string name="strUserEmailInvalid">Invalid Email</string>
    <string name="strUnknownAction">Action Still Not Define</string>
    <string name="strProcessing">Processing...</string>
    <string name="strPlsWait">Please Wait...</string>
    <string name="strReallyExist">Really Exit?</string>
    <string name="strAreYouSureYouWantToExit">Are You Sure You Want To Exit?</string>
    <string name="strLogout">Logout</string>
    <string name="strHire">Hire</string>
    <string name="strWork">Work</string>
    <string name="strTotalRequestHire">Total Request [Hire]               :</string>
    <string name="strTotalServiceProviderWork">Total Service Provide [Work]:</string>
    <string name="strJobOfferDone">Job Offer Done :</string>
    <string name="strJobOffer">Job Offer : </string>
    <string name="strWelcome">"Welcome "</string>
    <string name="strProjectStatus">Project Status :</string>
    <string name="strNotificationSend">Notification Send</string>
    <string name="strWaitingConfirmation">Waiting Confirmation</string>
    <string name="strCreateQuotation">Create Quotation</string>
    <string name="strToConfirmPriceQuoted">To Confirm Price Quoted</string>
    <string name="strDeal">Deal</string>
    <string name="strDownPaymentReleased">Down Payment Released</string>
    <string name="strWaitSPdrReply">Please wait for service provider reply.</string>
    <string name="strWaitCustReply">Please wait for customer reply.</string>
    <string name="strCfmJobOfr">Confirm Job Offer</string>
    <string name="strCustCdtNtfMessage">Please wait for selected service provider reply.</string>
    <string name="strSPdrCdtNtfMessage">Confirm And Accept the Job</string>
    <string name="strTitleCfmRqt">Confirm The Job</string>
    <string name="strCustCfmRqtMessage">Service provider accept your request. Please wait for service provider create quotation after contact you or onsite inspection.</string>
    <string name="strCreatQtt">Create Quotation</string>
    <string name="strCustQttMessage">Please wait for service provider create quotation.</string>
    <string name="strTitleCfmQtt">Confirm Quotation</string>
    <string name="strOkDeal">Ok, Deal</string>
    <string name="strCancelNoDeal">Cancel, No Deal</string>
    <string name="strSPdrCfmQttMessage">Please wait for customer to confirm the quotation.</string>
    <string name="strCustDDPmtMessage">Service provider will be notify by our system...</string>
    <string name="strTitleDDPmt">Deal?</string>
    <string name="strTitleDealNtf">Deal Notification</string>
    <string name="strCustWinAwdNtfMessage">Please wait service provider confirm receiving your deal notification.</string>
    <string name="strSPdrWinAwdNtfTask">OK, Noted and will arrange start date</string>
    <string name="strTitleRcvDwnPmt">Plan Start Date</string>
    <string name="strCustRcvDwnPmtMessage">Received Down payment and wait service provider to start the job</string>
    <string name="strSPdrSvrStrTask">Service Start</string>
    <string name="strSvrDone">Service End</string>
    <string name="strSPdrSvrStrMessage">Customer will determine end of the job after satisfaction</string>
    <string name="strTitleRtg">Rating</string>
    <string name="strTitleCustRtg">Customer Rating</string>
    <string name="strCustCustRtgMessage">Project already finish and will close after service provider rating</string>
    <string name="strSPdrCustRtgMessage">Please rate for customer</string>
    <string name="strTitleSPdrRtg">Service Provider Rating</string>
    <string name="strCustSPdrRtgMessage">Please rate for service provider</string>
    <string name="strSPdrSPdrRtgMessage">Project already finish and will close after customer rating</string>
    <string name="strTitlePjtDone">Project Done</string>
    <string name="strCustPjtDoneMessage">Project done successfully</string>
    <string name="strReSltSPdr">Are you sure you want reselect the service provider?</string>
    <string name="strTitleReSltSPdr">Reselect Service Provider?</string>
    <string name="strPageRedirect">Page will redirect after 10 seconds!!</string>
    <string name="strAbtUsHireTitle">Easier way to hire services </string>
    <string name="strAbtUsHireCont">We bring several professionals service to you without any of the work by using HelpU. You can now find, compare and hire the right professional service quickly and reliably.</string>
    <string name="strAbtUsWorkTitle">Increase your customer base</string>
    <string name="strAbtUsWorkCont">Help you to connect businesses to new customers by using HelpU. Give you more business opportunity and putting up your company advertisement here.</string>
    <string name="strHireSubTitle">Hire Or Find Professionals For These Services</string>
    <string name="strMoreDescription">More Description :</string>
    <string name="strType">Types :</string>
    <string name="strOk">Ok</string>
    <string name="strContactEmpty">Contact can not empty</string>
    <string name="strEmailEmpty">Email can not empty</string>
    <string name="strEmailInvalid">Invalid Email</string>
    <string name="strServiceEmpty">Service can not empty</string>
    <string name="strServiceAlreadyExist">Service has been registered. Please check the services you offer</string>
    <string name="strWorkSubTitle">More Information About You For Contact Purpose</string>
    <string name="strRegisterAsSrvPdr">Register As Service Provider</string>
    <string name="strDone">Done</string>
    <string name="strQuotationRM">Quotation (RM) :</string>
    <string name="strNtfWillSend">Notification will send to you shortly.</string>
    <string name="strCustomer">Customer</string>
    <string name="strCustomerRequestID">Customer Request ID :</string>
    <string name="strServiceNeeded">Service Needed :</string>
    <string name="strSave">Save</string>
    <string name="action_app_stats">Application Statistic</string>
    <string name="strCurrentPwd">Your current password</string>
    <string name="strNewPwd">Your new password</string>
    <string name="retypeNewPwd">Type your new password again</string>
    <string name="action_change_password">Change Password</string>
    <string name="strSendNewPassword"><![CDATA[Enter your registered email and we\'ll send your new password right away.]]></string>
    <string name="strEmailAddress">Email Address :</string>
    <string name="strSendEmail">Send Email</string>
    <string name="strCustomerCare">Customer Care</string>
    <string name="strRefresh">Refresh</string>
</resources>