<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.chungmin.helpu.activities.AboutUs">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strAbtUsHireTitle"
            android:id="@+id/lblHireTitle"
            android:textSize="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strAbtUsHireCont"
            android:id="@+id/lblHireContent"
            android:layout_marginTop="26dp"
            android:textSize="20dp"
            android:layout_below="@+id/lblHireTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strAbtUsWorkTitle"
            android:id="@+id/lblWorkTitle"
            android:textSize="25dp"
            android:layout_marginTop="71dp"
            android:layout_below="@+id/lblHireContent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strAbtUsWorkCont"
            android:id="@+id/lblWorkContent"
            android:textSize="20dp"
            android:layout_below="@+id/lblWorkTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="27dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strHire"
            android:id="@+id/btnHire"
            android:layout_below="@+id/lblHireContent"
            android:layout_centerHorizontal="true"
            style="@style/btnStyleSeagull" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strWork"
            android:id="@+id/btnWork"
            android:layout_below="@+id/lblWorkContent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            style="@style/btnStyleSeagull" />
    </RelativeLayout>
</ScrollView>