<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.chungmin.helpu.activities.AccountRecoveryActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strSendNewPassword"
        android:id="@+id/lblShortDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strEmailAddress"
        android:id="@+id/lblEmailAddress"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etEmailAddress"
        android:hint="@string/strEmail"
        android:textColorHint="#310e0c0c"
        android:background="@drawable/edit_text_gray" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strSendEmail"
        android:id="@+id/btnSendEmail"
        android:layout_gravity="center_horizontal"
        style="@style/btnStyleBeige"
        android:layout_marginTop="20dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/green_box"
        android:id="@+id/tvMessageBox"
        android:visibility="gone"
        android:textColor="#000000"
        android:textStyle="bold"
        android:padding="20dp" />
</LinearLayout>
