<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.chungmin.helpu.activities.ChangePasswordActivity"
    android:orientation="vertical">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etCurrentPassword"
        android:hint="@string/strCurrentPwd"
        android:textColorHint="#310e0c0c"
        android:background="@drawable/edit_text_gray" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etNewPassword"
        android:layout_marginTop="35dp"
        android:hint="@string/strNewPwd"
        android:textColorHint="#310e0c0c"
        android:background="@drawable/edit_text_gray" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etRetypeNewPassword"
        android:layout_marginTop="36dp"
        android:hint="@string/retypeNewPwd"
        android:textColorHint="#310e0c0c"
        android:background="@drawable/edit_text_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strCancel"
            android:id="@+id/btnCancel"
            android:layout_marginLeft="57dp"
            android:layout_marginStart="57dp"
            android:layout_alignTop="@+id/btnSave"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            style="@style/btnStyleBeige" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strSave"
            android:id="@+id/btnSave"
            android:layout_gravity="right"
            android:layout_marginTop="42dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/btnCancel"
            android:layout_toEndOf="@+id/btnCancel"
            android:layout_marginLeft="55dp"
            android:layout_marginStart="55dp"
            style="@style/btnStyleBeige" />

    </RelativeLayout>
</LinearLayout>
